deploy: c046fd00c0520d1bbe57c6eb6964334908622aeb

--- a/components/ReCreateMediaActionRendererComponent.html
+++ b/components/ReCreateMediaActionRendererComponent.html
@@ -228,6 +228,10 @@ intends to proceed with the action.</p>
                                 <a href="#dialogKey" >dialogKey</a>
                             </li>
                             <li>
+                                    <span class="modifier"></span>
+                                <a href="#entityForm" >entityForm</a>
+                            </li>
+                            <li>
                                     <span class="modifier">Private</span>
                                     <span class="modifier">Readonly</span>
                                 <a href="#service" >service</a>
@@ -242,9 +246,6 @@ intends to proceed with the action.</p>
                             </li>
                             <li>
                                 <a href="#data" >data</a>
-                            </li>
-                            <li>
-                                <a href="#entityForm" >entityForm</a>
                             </li>
                             <li>
                                 <a href="#target" >target</a>
@@ -320,8 +321,8 @@ intends to proceed with the action.</p>
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="79"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:79</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="81"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:81</a></div>
                         </td>
                     </tr>
 
@@ -368,7 +369,7 @@ events based on the outcome of the re-creation process.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:60</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:62</a></div>
                         </td>
                     </tr>
 
@@ -400,7 +401,7 @@ events based on the outcome of the re-creation process.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:59</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:60</a></div>
                         </td>
                     </tr>
 
@@ -410,6 +411,40 @@ events based on the outcome of the re-creation process.</p>
 </div>
                 </td>
             </tr>
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="entityForm"></a>
+                    <span class="name">
+                            <span class="modifier"></span>
+                        <span ><b>entityForm</b></span>
+                        <a href="#entityForm"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>InputSignal&lt;FormGroup&lt;FormControl&lt;&gt;&gt;&gt;</code>
+
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <div class="io-line">Inherited from         <code><a href="../classes/AbstractExplorerActionRenderer.html" target="_self" >AbstractExplorerActionRenderer</a></code>
+</div>
+                            </td>
+                        </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:61</a></code>
+</div>
+                        </td>
+                    </tr>
+
 
         </tbody>
     </table>
@@ -433,7 +468,7 @@ events based on the outcome of the re-creation process.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:62</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:64</a></div>
                         </td>
                     </tr>
 
@@ -460,7 +495,7 @@ events based on the outcome of the re-creation process.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:61</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:63</a></div>
                         </td>
                     </tr>
 
@@ -519,7 +554,7 @@ events based on the outcome of the re-creation process.</p>
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;Data | []&gt;</code>
+                        <i>Type : </i>    <code>InputSignal&lt; | []&gt;</code>
 
                     </td>
                 </tr>
@@ -539,45 +574,6 @@ events based on the outcome of the re-creation process.</p>
             <tr>
                 <td class="col-md-4">
                     <div class="io-description"><p>The data for the actions to be rendered.</p>
-</div>
-                </td>
-            </tr>
-
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="entityForm"></a>
-                    <span class="name">
-                        <span ><b>entityForm</b></span>
-                        <a href="#entityForm"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;FormGroup&gt;</code>
-
-                    </td>
-                </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                <div class="io-line">Inherited from         <code><a href="../classes/AbstractExplorerActionRenderer.html" target="_self" >AbstractExplorerActionRenderer</a></code>
-</div>
-                            </td>
-                        </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:32</a></code>
-</div>
-                        </td>
-                    </tr>
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-description"><p>The form group managing the entity data associated with the actions.</p>
 </div>
                 </td>
             </tr>
@@ -645,7 +641,7 @@ events based on the outcome of the re-creation process.</p>
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:69</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="71" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:71</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -666,7 +662,7 @@ during the media re-creation process.</p>
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {ChangeDetectionStrategy, Component, inject} from &quot;@angular/core&quot;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {ChangeDetectionStrategy, Component, inject, InputSignal} from &quot;@angular/core&quot;;
 import {RippleModule} from &quot;primeng/ripple&quot;;
 import {ButtonModule} from &quot;primeng/button&quot;;
 import {ConfirmDialogModule} from &quot;primeng/confirmdialog&quot;;
@@ -680,10 +676,11 @@ import {
 import {PreloaderComponent} from &quot;../../../../../../../../modules/preloader&quot;;
 import {LocalizePipe} from &quot;../../../../../../../../modules/locale&quot;;
 import {Store} from &quot;../../../../../../../../modules/store&quot;;
-import {MediaService} from &quot;../../../../../../../../modules/media&quot;;
+import {Media, MediaService} from &quot;../../../../../../../../modules/media&quot;;
 import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
-import {ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
+import {ProcessUnit, ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
+import {FormControl, FormGroup} from &quot;@angular/forms&quot;;
 
 /**
  * This component provides functionality to confirm and re-create a media file
@@ -709,6 +706,7 @@ export class ReCreateMediaActionRendererComponent extends AbstractExplorerAction
   /** Key for the confirmation dialog. */
 
   readonly dialogKey &#x3D; &quot;recreate-media-action-dialog&quot;;
+  override entityForm: InputSignal&lt;FormGroup&lt;{ [K in keyof Media]: FormControl&lt;Media[K]&gt; }&gt;&gt;;
   private readonly confirmationService &#x3D; inject(ConfirmationService);
   private readonly store &#x3D; inject(Store);
   private readonly service &#x3D; inject(MediaService);
@@ -732,7 +730,7 @@ export class ReCreateMediaActionRendererComponent extends AbstractExplorerAction
     this.confirmationService.confirm({
       key: this.dialogKey,
       accept: () &#x3D;&gt; {
-        this.service.reCreate(this.entityForm().controls.id.value).pipe(
+        this.service.reCreate(this.entityForm().controls.id.value?.toString()).pipe(
           usePreloader(this.store, this.preloaderChannel),
           catchError((res) &#x3D;&gt; {
             this.store.emit&lt;ToastData&gt;(ToastEvent.Error, {message: res.error.message});
