--- a/components/BooleanObjectRendererComponent.html
+++ b/components/BooleanObjectRendererComponent.html
@@ -382,7 +382,7 @@ visually with checkboxes.</p>
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>FormGroup</code>
+                        <i>Type : </i>    <code>FormGroup&lt;FormControl&lt;&gt;&gt;</code>
 
                     </td>
                 </tr>
@@ -401,7 +401,7 @@ visually with checkboxes.</p>
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>The form group associated with the entity.</p>
+                    <div class="io-description"><p>The form group associated with the entity data.</p>
 </div>
                 </td>
             </tr>
