--- a/components/CreateMediaActionRendererComponent.html
+++ b/components/CreateMediaActionRendererComponent.html
@@ -450,7 +450,7 @@ It subscribes to the dialog&#39;s close event to navigate to the new media&#39;s
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;Data | []&gt;</code>
+                        <i>Type : </i>    <code>InputSignal&lt; | []&gt;</code>
 
                     </td>
                 </tr>
