--- a/components/DeleteFileActionRendererComponent.html
+++ b/components/DeleteFileActionRendererComponent.html
@@ -225,6 +225,10 @@
                                 <a href="#dialogKey" >dialogKey</a>
                             </li>
                             <li>
+                                    <span class="modifier"></span>
+                                <a href="#entityForm" >entityForm</a>
+                            </li>
+                            <li>
                                     <span class="modifier">Private</span>
                                     <span class="modifier">Readonly</span>
                                 <a href="#router" >router</a>
@@ -244,9 +248,6 @@
                             </li>
                             <li>
                                 <a href="#data" >data</a>
-                            </li>
-                            <li>
-                                <a href="#entityForm" >entityForm</a>
                             </li>
                             <li>
                                 <a href="#target" >target</a>
@@ -322,8 +323,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="74"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:74</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="77"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:77</a></div>
                         </td>
                     </tr>
 
@@ -368,7 +369,7 @@ it deletes the file and navigates back to the files section.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:57</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:60</a></div>
                         </td>
                     </tr>
 
@@ -400,7 +401,7 @@ it deletes the file and navigates back to the files section.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:56</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:59</a></div>
                         </td>
                     </tr>
 
@@ -410,6 +411,40 @@ it deletes the file and navigates back to the files section.</p>
 </div>
                 </td>
             </tr>
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="entityForm"></a>
+                    <span class="name">
+                            <span class="modifier"></span>
+                        <span ><b>entityForm</b></span>
+                        <a href="#entityForm"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>InputSignal&lt;FormGroup&lt;FormControl&lt;&gt;&gt;&gt;</code>
+
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <div class="io-line">Inherited from         <code><a href="../classes/AbstractExplorerActionRenderer.html" target="_self" >AbstractExplorerActionRenderer</a></code>
+</div>
+                            </td>
+                        </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:57</a></code>
+</div>
+                        </td>
+                    </tr>
+
 
         </tbody>
     </table>
@@ -433,7 +468,7 @@ it deletes the file and navigates back to the files section.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:60</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:63</a></div>
                         </td>
                     </tr>
 
@@ -460,7 +495,7 @@ it deletes the file and navigates back to the files section.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:58</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:61</a></div>
                         </td>
                     </tr>
 
@@ -487,7 +522,7 @@ it deletes the file and navigates back to the files section.</p>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:59</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:62</a></div>
                         </td>
                     </tr>
 
@@ -546,7 +581,7 @@ it deletes the file and navigates back to the files section.</p>
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;Data | []&gt;</code>
+                        <i>Type : </i>    <code>InputSignal&lt; | []&gt;</code>
 
                     </td>
                 </tr>
@@ -566,45 +601,6 @@ it deletes the file and navigates back to the files section.</p>
             <tr>
                 <td class="col-md-4">
                     <div class="io-description"><p>The data for the actions to be rendered.</p>
-</div>
-                </td>
-            </tr>
-
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="entityForm"></a>
-                    <span class="name">
-                        <span ><b>entityForm</b></span>
-                        <a href="#entityForm"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;FormGroup&gt;</code>
-
-                    </td>
-                </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                <div class="io-line">Inherited from         <code><a href="../classes/AbstractExplorerActionRenderer.html" target="_self" >AbstractExplorerActionRenderer</a></code>
-</div>
-                            </td>
-                        </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:32</a></code>
-</div>
-                        </td>
-                    </tr>
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-description"><p>The form group managing the entity data associated with the actions.</p>
 </div>
                 </td>
             </tr>
@@ -672,7 +668,7 @@ it deletes the file and navigates back to the files section.</p>
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:66</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:69</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -692,7 +688,7 @@ it deletes the file and navigates back to the files section.</p>
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {ChangeDetectionStrategy, Component, inject} from &quot;@angular/core&quot;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {ChangeDetectionStrategy, Component, inject, InputSignal} from &quot;@angular/core&quot;;
 import {RippleModule} from &quot;primeng/ripple&quot;;
 import {ButtonModule} from &quot;primeng/button&quot;;
 import {DeleteFileActionRendererService} from &quot;./delete-file-action-renderer.service&quot;;
@@ -710,6 +706,8 @@ import {Store} from &quot;../../../../../../../../modules/store&quot;;
 import {Explorer} from &quot;../../../../../../../explorer&quot;;
 import {ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
+import {FormControl, FormGroup} from &quot;@angular/forms&quot;;
+import {File, Media} from &quot;@k-platform/client&quot;;
 
 /**
  * This component provides functionality to confirm and delete a file.
@@ -730,6 +728,7 @@ import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/u
 })
 export class DeleteFileActionRendererComponent extends AbstractExplorerActionRenderer {
 
+  override entityForm: InputSignal&lt;FormGroup&lt;{ [K in keyof File]: FormControl&lt;File[K]&gt; }&gt;&gt;;
   /** Key for the confirmation dialog. */
   readonly dialogKey &#x3D; &quot;del-file-action-dialog&quot;;
   private readonly confirmationService &#x3D; inject(ConfirmationService);
@@ -753,7 +752,7 @@ export class DeleteFileActionRendererComponent extends AbstractExplorerActionRen
     this.confirmationService.confirm({
       key: this.dialogKey,
       accept: () &#x3D;&gt; {
-        this.service.remove(this.entityForm().controls.id.value).pipe(
+        this.service.remove(this.entityForm().controls.id.value?.toString()).pipe(
           usePreloader(this.store, this.preloaderChannel),
           catchError((res) &#x3D;&gt; {
             this.store.emit&lt;ToastData&gt;(ToastEvent.Error, {message: res.error.message});
