--- a/components/NewPasswordObjectRendererComponent.html
+++ b/components/NewPasswordObjectRendererComponent.html
@@ -521,7 +521,7 @@ and checks for matching passwords.</p>
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>FormGroup</code>
+                        <i>Type : </i>    <code>FormGroup&lt;FormControl&lt;&gt;&gt;</code>
 
                     </td>
                 </tr>
@@ -540,7 +540,7 @@ and checks for matching passwords.</p>
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>The form group associated with the entity.</p>
+                    <div class="io-description"><p>The form group associated with the entity data.</p>
 </div>
                 </td>
             </tr>
