--- a/components/ProcessStatsObjectRendererComponent.html
+++ b/components/ProcessStatsObjectRendererComponent.html
@@ -971,7 +971,7 @@ subscribing to updates based on the status of the process.</p>
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>FormGroup</code>
+                        <i>Type : </i>    <code>FormGroup&lt;FormControl&lt;&gt;&gt;</code>
 
                     </td>
                 </tr>
@@ -990,7 +990,7 @@ subscribing to updates based on the status of the process.</p>
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>The form group associated with the entity.</p>
+                    <div class="io-description"><p>The form group associated with the entity data.</p>
 </div>
                 </td>
             </tr>
