--- a/components/ReferenceObjectRendererComponent.html
+++ b/components/ReferenceObjectRendererComponent.html
@@ -338,7 +338,7 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>FormGroup</code>
+                        <i>Type : </i>    <code>FormGroup&lt;FormControl&lt;&gt;&gt;</code>
 
                     </td>
                 </tr>
@@ -357,7 +357,7 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>The form group associated with the entity.</p>
+                    <div class="io-description"><p>The form group associated with the entity data.</p>
 </div>
                 </td>
             </tr>
