--- a/components/StopProcessActionRendererComponent.html
+++ b/components/StopProcessActionRendererComponent.html
@@ -226,6 +226,10 @@
                                 <a href="#cdr" >cdr</a>
                             </li>
                             <li>
+                                    <span class="modifier"></span>
+                                <a href="#entityForm" >entityForm</a>
+                            </li>
+                            <li>
                                     <span class="modifier">Private</span>
                                     <span class="modifier">Readonly</span>
                                 <a href="#injector" >injector</a>
@@ -245,9 +249,6 @@
                             </li>
                             <li>
                                 <a href="#data" >data</a>
-                            </li>
-                            <li>
-                                <a href="#entityForm" >entityForm</a>
                             </li>
                             <li>
                                 <a href="#target" >target</a>
@@ -332,8 +333,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="98"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:98</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="101"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:101</a></div>
                         </td>
                     </tr>
 
@@ -371,8 +372,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="111"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:111</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="114"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:114</a></div>
                         </td>
                     </tr>
 
@@ -416,7 +417,41 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:68</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="71" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:71</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="entityForm"></a>
+                    <span class="name">
+                            <span class="modifier"></span>
+                        <span ><b>entityForm</b></span>
+                        <a href="#entityForm"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>InputSignal&lt;FormGroup&lt;FormControl&lt;&gt;&gt;&gt;</code>
+
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <div class="io-line">Inherited from         <code><a href="../classes/AbstractExplorerActionRenderer.html" target="_self" >AbstractExplorerActionRenderer</a></code>
+</div>
+                            </td>
+                        </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:68</a></code>
+</div>
                         </td>
                     </tr>
 
@@ -443,7 +478,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:69</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="72" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:72</a></div>
                         </td>
                     </tr>
 
@@ -470,7 +505,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:66</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:69</a></div>
                         </td>
                     </tr>
 
@@ -497,7 +532,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:67</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="70" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:70</a></div>
                         </td>
                     </tr>
 
@@ -556,7 +591,7 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;Data | []&gt;</code>
+                        <i>Type : </i>    <code>InputSignal&lt; | []&gt;</code>
 
                     </td>
                 </tr>
@@ -576,45 +611,6 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-description"><p>The data for the actions to be rendered.</p>
-</div>
-                </td>
-            </tr>
-
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="entityForm"></a>
-                    <span class="name">
-                        <span ><b>entityForm</b></span>
-                        <a href="#entityForm"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;FormGroup&gt;</code>
-
-                    </td>
-                </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                <div class="io-line">Inherited from         <code><a href="../classes/AbstractExplorerActionRenderer.html" target="_self" >AbstractExplorerActionRenderer</a></code>
-</div>
-                            </td>
-                        </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:32</a></code>
-</div>
-                        </td>
-                    </tr>
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-description"><p>The form group managing the entity data associated with the actions.</p>
 </div>
                 </td>
             </tr>
@@ -682,7 +678,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:75</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:78</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -713,7 +709,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="83" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:83</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="86" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:86</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -744,7 +740,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="91" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:91</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="94" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:94</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -770,6 +766,7 @@
   Component,
   inject,
   Injector,
+  InputSignal,
   OnInit,
   runInInjectionContext
 } from &quot;@angular/core&quot;;
@@ -793,6 +790,7 @@ import {
 } from &quot;../../../../../../../../global/vars&quot;;
 import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
+import {FormControl, FormGroup} from &quot;@angular/forms&quot;;
 
 /**
  * This component allows users to stop a running process and handle the action state.
@@ -813,6 +811,7 @@ import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/u
 export class StopProcessActionRendererComponent extends AbstractExplorerActionRenderer
   implements OnInit {
 
+  override entityForm: InputSignal&lt;FormGroup&lt;{ [K in keyof ProcessUnit]: FormControl&lt;ProcessUnit[K]&gt; }&gt;&gt;;
   private readonly service &#x3D; inject(ProcessService);
   private readonly store &#x3D; inject(Store);
   private readonly cdr &#x3D; inject(ChangeDetectorRef);
@@ -823,7 +822,7 @@ export class StopProcessActionRendererComponent extends AbstractExplorerActionRe
    * @returns The enabled control value.
    */
   get enabledCtrlValue() {
-    return this.entityForm().controls.enabled.value as boolean;
+    return this.entityForm().controls.enabled.value;
   }
 
   /**
@@ -831,7 +830,7 @@ export class StopProcessActionRendererComponent extends AbstractExplorerActionRe
    * @returns The current status of the process.
    */
   get statusControlValue() {
-    return this.entityForm().controls.status.value as ProcessStatus;
+    return this.entityForm().controls.status.value;
   }
 
   /**
