--- a/components/ToggleProcessActionRendererComponent.html
+++ b/components/ToggleProcessActionRendererComponent.html
@@ -226,6 +226,10 @@
                                 <a href="#cdr" >cdr</a>
                             </li>
                             <li>
+                                    <span class="modifier"></span>
+                                <a href="#entityForm" >entityForm</a>
+                            </li>
+                            <li>
                                     <span class="modifier">Private</span>
                                     <span class="modifier">Readonly</span>
                                 <a href="#injector" >injector</a>
@@ -245,9 +249,6 @@
                             </li>
                             <li>
                                 <a href="#data" >data</a>
-                            </li>
-                            <li>
-                                <a href="#entityForm" >entityForm</a>
                             </li>
                             <li>
                                 <a href="#target" >target</a>
@@ -329,8 +330,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="85"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:85</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="88"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:88</a></div>
                         </td>
                     </tr>
 
@@ -368,8 +369,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="98"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:98</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="101"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:101</a></div>
                         </td>
                     </tr>
 
@@ -413,7 +414,41 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:63</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:66</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="entityForm"></a>
+                    <span class="name">
+                            <span class="modifier"></span>
+                        <span ><b>entityForm</b></span>
+                        <a href="#entityForm"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>    <code>InputSignal&lt;FormGroup&lt;FormControl&lt;&gt;&gt;&gt;</code>
+
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <div class="io-line">Inherited from         <code><a href="../classes/AbstractExplorerActionRenderer.html" target="_self" >AbstractExplorerActionRenderer</a></code>
+</div>
+                            </td>
+                        </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:63</a></code>
+</div>
                         </td>
                     </tr>
 
@@ -440,7 +475,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:64</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:67</a></div>
                         </td>
                     </tr>
 
@@ -467,7 +502,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:61</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:64</a></div>
                         </td>
                     </tr>
 
@@ -494,7 +529,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:62</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:65</a></div>
                         </td>
                     </tr>
 
@@ -553,7 +588,7 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;Data | []&gt;</code>
+                        <i>Type : </i>    <code>InputSignal&lt; | []&gt;</code>
 
                     </td>
                 </tr>
@@ -573,45 +608,6 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-description"><p>The data for the actions to be rendered.</p>
-</div>
-                </td>
-            </tr>
-
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="entityForm"></a>
-                    <span class="name">
-                        <span ><b>entityForm</b></span>
-                        <a href="#entityForm"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-                <tr>
-                    <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;FormGroup&gt;</code>
-
-                    </td>
-                </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                <div class="io-line">Inherited from         <code><a href="../classes/AbstractExplorerActionRenderer.html" target="_self" >AbstractExplorerActionRenderer</a></code>
-</div>
-                            </td>
-                        </tr>
-                    <tr>
-                        <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:32</a></code>
-</div>
-                        </td>
-                    </tr>
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-description"><p>The form group managing the entity data associated with the actions.</p>
 </div>
                 </td>
             </tr>
@@ -679,7 +675,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="70" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:70</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:73</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -710,7 +706,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:78</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:81</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -736,6 +732,7 @@
   Component,
   inject,
   Injector,
+  InputSignal,
   OnInit,
   runInInjectionContext
 } from &quot;@angular/core&quot;;
@@ -754,6 +751,7 @@ import {Store} from &quot;../../../../../../../../modules/store&quot;;
 import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
 import {ProcessUnit, ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
+import {FormControl, FormGroup} from &quot;@angular/forms&quot;;
 
 /**
  * This component allows users to enable or disable a process and handles state changes.
@@ -774,6 +772,7 @@ import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/u
 export class ToggleProcessActionRendererComponent extends AbstractExplorerActionRenderer
   implements OnInit {
 
+  override entityForm: InputSignal&lt;FormGroup&lt;{ [K in keyof ProcessUnit]: FormControl&lt;ProcessUnit[K]&gt; }&gt;&gt;;
   private readonly service &#x3D; inject(ProcessService);
   private readonly store &#x3D; inject(Store);
   private readonly cdr &#x3D; inject(ChangeDetectorRef);
@@ -784,7 +783,7 @@ export class ToggleProcessActionRendererComponent extends AbstractExplorerAction
    * @returns The enabled control value.
    */
   get enabledCtrlValue() {
-    return this.entityForm().controls.enabled.value as boolean;
+    return this.entityForm().controls.enabled.value;
   }
 
   /**
