--- a/components/UpdateMediaFileActionRendererComponent.html
+++ b/components/UpdateMediaFileActionRendererComponent.html
@@ -451,7 +451,7 @@ the dialog&#39;s close event to reload the object in the explorer.</p>
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;Data | []&gt;</code>
+                        <i>Type : </i>    <code>InputSignal&lt; | []&gt;</code>
 
                     </td>
                 </tr>
