deploy: 2b4262fa5820f64cb16e39564e2bd01e66df3b18

--- a/components/LocalizeMediaInputComponent.html
+++ b/components/LocalizeMediaInputComponent.html
@@ -1125,7 +1125,7 @@
 
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {ChangeDetectionStrategy, ChangeDetectorRef, Component, inject, input} from &quot;@angular/core&quot;;
-import {Language, LocalizedMedia, LocalizedString} from &quot;../locale.types&quot;;
+import {Language, LocalizedMedia} from &quot;../locale.types&quot;;
 import {AVAIL_LANGS} from &quot;../locale.constants&quot;;
 import {TranslocoPipe, TranslocoService} from &quot;@ngneat/transloco&quot;;
 import {
