--- a/components/ReCreateMediaActionRendererComponent.html
+++ b/components/ReCreateMediaActionRendererComponent.html
@@ -678,7 +678,7 @@ import {LocalizePipe} from &quot;../../../../../../../../modules/locale&quot;;
 import {Store} from &quot;../../../../../../../../modules/store&quot;;
 import {Media, MediaService} from &quot;../../../../../../../../modules/media&quot;;
 import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
-import {ProcessUnit, ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
+import {ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 import {FormControl, FormGroup} from &quot;@angular/forms&quot;;
 
