--- a/components/StopProcessActionRendererComponent.html
+++ b/components/StopProcessActionRendererComponent.html
@@ -333,8 +333,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="101"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:101</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="96"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:96</a></div>
                         </td>
                     </tr>
 
@@ -372,8 +372,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="114"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:114</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="109"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:109</a></div>
                         </td>
                     </tr>
 
@@ -417,7 +417,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="71" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:71</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:66</a></div>
                         </td>
                     </tr>
 
@@ -450,7 +450,7 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:68</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:63</a></code>
 </div>
                         </td>
                     </tr>
@@ -478,7 +478,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="72" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:72</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:67</a></div>
                         </td>
                     </tr>
 
@@ -505,7 +505,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:69</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:64</a></div>
                         </td>
                     </tr>
 
@@ -532,7 +532,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="70" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:70</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:65</a></div>
                         </td>
                     </tr>
 
@@ -678,7 +678,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:78</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:73</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -709,7 +709,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="86" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:86</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:81</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -740,7 +740,7 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="94" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:94</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="89" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/stop/stop-process-action-renderer.component.ts:89</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -782,12 +782,7 @@ import {
   AbstractExplorerActionRenderer
 } from &quot;../../../../default/abstract-explorer-action-renderer&quot;;
 import {Store} from &quot;../../../../../../../../modules/store&quot;;
-import {
-  ProcessStatus,
-  ProcessUnit,
-  ToastData,
-  ToastEvent
-} from &quot;../../../../../../../../global/vars&quot;;
+import {ProcessUnit, ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
 import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 import {FormControl, FormGroup} from &quot;@angular/forms&quot;;
